force-app/main/default/objects/Daily_Sales_Sell_In__c/Daily_Sales_Sell_In__c.object-meta.xml
<CustomObject>
    <label>Daily Sales Sell In</label>
    <nameField>
        <displayFormat>DSSI-{YYYY}{MM}{DD}-{000000}</displayFormat>
        <label>Daily Sales Sell In Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Daily Sales Sell In</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>