force-app/main/default/objects/Daily_Sales_Sell_In__c/fields/Daily_Inspection_Report__c.field-meta.xml
<CustomField>
    <fullName>Daily_Inspection_Report__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Daily Inspection Report</label>
    <referenceTo>Daily_Inspection_Report__c</referenceTo>
    <relationshipLabel>Daily Sales Sell In</relationshipLabel>
    <relationshipName>Daily_Sales_Sell_In</relationshipName>
    <type>Lookup</type>
</CustomField>