force-app/main/default/objects/Daily_Sales_Sell_In__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product__c</referenceTo>
    <relationshipLabel>Daily Sales Sell In</relationshipLabel>
    <relationshipName>Daily_Sales_Sell_In</relationshipName>
    <type>Lookup</type>
</CustomField>